# backend/cmd/server/routes/v1/report.go
@@ -12,6 +12,5 @@ func RegisterReportRoutes(serviceCtx sctx.ServiceContext, r *gin.RouterGroup) {
 
 	reports := r.Group("/reports")
 
-	reports.GET("/daily", h.GenerateDailySummary())
-	reports.GET("/top-active-items", h.ListTopActiveItems())
+	reports.GET("/daily", h.ListTopActiveItems())
 }
